refactor(flink): improve flink support