@@ -13,19 +13,19 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package org.febit.rectify.flink;
+package org.febit.rectify.flink.streaming;
 
 import org.apache.flink.api.common.typeinfo.BasicTypeInfo;
 import org.apache.flink.streaming.api.environment.StreamExecutionEnvironment;
 import org.apache.flink.types.Row;
 import org.febit.lang.util.Lists;
-import org.febit.rectify.flink.streaming.FlinkStreamingRectifier;
+import org.febit.rectify.flink.FlinkTestSupport;
 import org.febit.rectify.format.JsonSourceFormat;
 import org.junit.jupiter.api.Test;
 
 import java.util.Comparator;
-import java.util.List;
 
+import static java.util.Objects.requireNonNull;
 import static org.junit.jupiter.api.Assertions.*;
 
 class FlinkStreamingRectifierTest {
@@ -34,16 +34,18 @@ class FlinkStreamingRectifierTest {
     void processDataStream() throws Exception {
         var env = StreamExecutionEnvironment.getExecutionEnvironment();
         env.setParallelism(2);
-        var rawStream = env.fromData(FlinkRectifierTests.SOURCE, BasicTypeInfo.STRING_TYPE_INFO);
-        var rowStream = FlinkStreamingRectifier.operator(
-                rawStream, new JsonSourceFormat(), FlinkRectifierTests.CONF);
-        try (var iter = rowStream.executeAndCollect()) {
-            List<Row> rows = Lists.collect(iter);
-            rows.sort(Comparator.comparingLong(r -> (Long) r.getField(0)));
+        var source = env.fromData(FlinkTestSupport.SOURCE, BasicTypeInfo.STRING_TYPE_INFO);
+
+        var stream = RectifierStreamingSupport.flatMap(
+                source, FlinkTestSupport.SETTINGS, new JsonSourceFormat());
+
+        try (var iter = stream.executeAndCollect()) {
+            var rows = Lists.collect(iter);
+            rows.sort(Comparator.comparingLong(r -> requireNonNull((Long) r.getField(0))));
 
             assertEquals(4, rows.size());
             Row row;
-            row = rows.get(0);
+            row = rows.getFirst();
             assertEquals(2L, row.getField(0));
             assertEquals(20, row.getField(2));
             assertEquals("prefix:Second", row.getField(3));
